Add crazyflie-firmware submodule on branch master

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "crazyflie-lib-python"]
 	path = crazyflie-lib-python
 	url = git@github.com:sebastianbucior/crazyflie-lib-python.git
+[submodule "crazyflie-firmware"]
+	path = crazyflie-firmware
+	url = https://github.com/llanesc/crazyflie-firmware.git
+	branch = sitl-release
