--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = crazyflie-firmware
 	url = https://github.com/llanesc/crazyflie-firmware.git
 	branch = sitl-release
+[submodule "ros2_ws/src/crazyswarm2"]
+	path = ros2_ws/src/crazyswarm2
+	url = git@github.com:sebastianbucior/crazyswarm2.git
