Initial working wersion

--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,9 @@ rosbags/
 *.AppImage
 
 .vscode/
+**/__pycache__/*
+**/.vscode/*
+ros2_ws/build/*
+ros2_ws/install/*
+ros2_ws/log/*
+ros2_ws/cache/*
