--- a/ros2_ws/src/crazyflie_mpc/config/mpc.yaml
+++ b/ros2_ws/src/crazyflie_mpc/config/mpc.yaml
@@ -24,9 +24,9 @@ full_model:
   kappa: 8 # defines x[kappa] to get desired angulars
   use_predictor: false
 
-delay_relay:
-  enabled: true # todo: implement 
-  delay_ms: 10.0
+delay_relay: #
+  enabled: true
+  delay_ms: 0.0
   jitter_ms: 0.0
 
 path_planner:
